chore: rename xroad.common.* prefix
Refs: XRDDEV-2974

--- a/src/central-server/admin-service/application/src/test/resources/application-test.yml
+++ b/src/central-server/admin-service/application/src/test/resources/application-test.yml
@@ -9,9 +9,8 @@ spring:
       enabled: false
 
 xroad:
-  common:
-    rpc:
-      use-tls: false
+  common-rpc:
+    use-tls: false
 
 logging:
   config: classpath:centralserver-admin-service-test-logback.xml
