--- a/development/ansible/roles/init-dev-configuration/files/ss/etc/xroad/conf.d/local.yaml
+++ b/development/ansible/roles/init-dev-configuration/files/ss/etc/xroad/conf.d/local.yaml
@@ -1,7 +1,6 @@
 xroad:
-  common:
-    global-conf:
-      source: REMOTE
+  common-global-conf:
+    source: REMOTE
   proxy-ui-api:
     acme-challenge-port-enabled: true
 
