--- a/development/docker/central-server/Dockerfile
+++ b/development/docker/central-server/Dockerfile
@@ -28,7 +28,7 @@ ARG COMPONENT=main
 # Add X-Road dependencies repo
 ADD ["https://artifactory.niis.org/api/gpg/key/public","/tmp/deps-repokey.gpg"]
 RUN echo "deb https://artifactory.niis.org/xroad-dependencies-deb xroad external" >/etc/apt/sources.list.d/xroad-deps.list \
-  && && apt-key add '/tmp/deps-repokey.gpg' \
+  && apt-key add '/tmp/deps-repokey.gpg'
 
 ADD ["$REPO_KEY","/tmp/repokey.gpg"]
 ADD ["${REPO}/dists/${DIST}/Release","/tmp/Release"]
@@ -54,7 +54,7 @@ ADD ["https://artifactory.niis.org/api/gpg/key/public","/tmp/deps-repokey.gpg"]
 RUN echo "deb https://artifactory.niis.org/xroad-dependencies-deb xroad external" >/etc/apt/sources.list.d/xroad-deps.list \
   && apt-key add '/tmp/deps-repokey.gpg'
 
-RUN --mount=type=bind,source=build/packages,target=/tmp/packages \
+RUN --mount=type=bind,from=packages,target=/tmp/packages \
    cp -r /tmp/packages /tmp/repo \
   && cd /tmp/repo && dpkg-scanpackages -m . > Packages \
   && echo "deb [trusted=yes] file:/tmp/repo /" >/etc/apt/sources.list.d/xroad.list \
