--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -58,6 +58,8 @@ jobs:
     with:
       ref: ${{ github.ref }}
       sha: ${{ github.sha }}
+      image_registry: ${{ needs.build-and-package.outputs.image_registry }}
+      service_image_tag: ${{ needs.build-and-package.outputs.service_image_tag }}
 
   test-e2e:
     name: Run E2E tests
