chore: use ghcr for gradle build as well
Refs: XRDDEV-3003

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -69,6 +69,8 @@ jobs:
     with:
       ref: ${{ github.ref }}
       sha: ${{ github.sha }}
+      image_registry: ${{ needs.build-and-package.outputs.image_registry }}
+      service_image_tag: ${{ needs.build-and-package.outputs.service_image_tag }}
 
   build-summary:
     name: Build Summary
