--- a/.github/actions/setup-build-env/action.yml
+++ b/.github/actions/setup-build-env/action.yml
@@ -21,6 +21,12 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - name: Log initial storage
+      uses: ./.github/actions/log-storage
+      with:
+        label: 'Initial Storage Utilization'
+        show-top-dirs: 'true'
+
     - name: Ensure required packages
       if: runner.os == 'Linux'
       shell: bash
@@ -65,3 +71,8 @@ runs:
       uses: docker/setup-buildx-action@v3
       with:
         driver-opts: network=host
+
+    - name: Log post-setup storage
+      uses: ./.github/actions/log-storage
+      with:
+        label: 'Post-Setup Storage Utilization'
