--- a/.github/workflows/_test-security-server.yml
+++ b/.github/workflows/_test-security-server.yml
@@ -60,7 +60,7 @@ jobs:
           XROAD_SECRET_STORE_TOKEN=root-token
           SERVERCONF_INIT_IMG=${REGISTRY}/ss-db-serverconf-init:${TAG}
           MESSAGELOG_INIT_IMG=${REGISTRY}/ss-db-messagelog-init:${TAG}
-          OP_MONITOR_INIT_IMG=${REGISTRY}/ss-db-op-monitor-init:${TAG}
+          OP_MONITOR_INIT_IMG=${REGISTRY}/ss-db-opmonitor-init:${TAG}
           CONFIGURATION_CLIENT_IMG=${REGISTRY}/ss-configuration-client:${TAG}
           MONITOR_IMG=${REGISTRY}/ss-monitor:${TAG}
           SIGNER_IMG=${REGISTRY}/ss-signer:${TAG}
