--- a/.github/workflows/build-package-builder-images.yaml
+++ b/.github/workflows/build-package-builder-images.yaml
@@ -25,8 +25,8 @@ env:
   REGISTRY: ghcr.io
 
 jobs:
-  build-package-builder-images:
-    name: Build and push package builder images
+  build-amd64:
+    name: Build AMD64 images
     runs-on: ubuntu-24.04
     
     steps:
@@ -48,35 +48,103 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push all builder images
+      - name: Build and push AMD64 builder images
         working-directory: ./deployment/native-packages/docker
         env:
           IMAGE_REGISTRY: ${{ env.REGISTRY }}/${{ github.repository }}
           IMAGE_TAG: ${{ steps.version.outputs.tag }}
-          BUILD_PLATFORMS: linux/amd64,linux/arm64
+          BUILD_PLATFORMS: linux/amd64
         run: |
-          # Convert repository name to lowercase for GHCR
           export IMAGE_REGISTRY=$(echo "$IMAGE_REGISTRY" | tr '[:upper:]' '[:lower:]')
-          
           ./prepare-builder-image.sh all
 
+  build-arm64:
+    name: Build ARM64 images
+    runs-on: ubuntu-24.04-arm
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Read version from gradle.properties
+        id: version
+        working-directory: ./src
+        run: |
+          XROAD_BASE_IMAGE_TAG=$(grep "^xroadBaseImageTag=" gradle.properties | cut -d'=' -f2 | tr -d ' ')
+          echo "tag=${XROAD_BASE_IMAGE_TAG}" >> $GITHUB_OUTPUT
+          echo "Using tag: ${XROAD_BASE_IMAGE_TAG}"
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push ARM64 builder images
+        working-directory: ./deployment/native-packages/docker
+        env:
+          IMAGE_REGISTRY: ${{ env.REGISTRY }}/${{ github.repository }}
+          IMAGE_TAG: ${{ steps.version.outputs.tag }}
+          BUILD_PLATFORMS: linux/arm64
+        run: |
+          export IMAGE_REGISTRY=$(echo "$IMAGE_REGISTRY" | tr '[:upper:]' '[:lower:]')
+          ./prepare-builder-image.sh all
+
+  summary:
+    name: Build summary
+    runs-on: ubuntu-24.04
+    needs: [build-amd64, build-arm64]
+    if: always()
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Read version from gradle.properties
+        id: version
+        working-directory: ./src
+        run: |
+          XROAD_BASE_IMAGE_TAG=$(grep "^xroadBaseImageTag=" gradle.properties | cut -d'=' -f2 | tr -d ' ')
+          echo "tag=${XROAD_BASE_IMAGE_TAG}" >> $GITHUB_OUTPUT
+
       - name: Add build summary
-        if: always()
         run: |
           REPO_LOWERCASE=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          
+          AMD64_STATUS="${{ needs.build-amd64.result }}"
+          ARM64_STATUS="${{ needs.build-arm64.result }}"
+          
+          if [[ "$AMD64_STATUS" == "success" ]]; then
+            AMD64_ICON="✅"
+          else
+            AMD64_ICON="❌"
+          fi
+          
+          if [[ "$ARM64_STATUS" == "success" ]]; then
+            ARM64_ICON="✅"
+          else
+            ARM64_ICON="❌"
+          fi
+          
           cat >> $GITHUB_STEP_SUMMARY << EOF
           # Package Builder Images Build
           
-          **Status:** ✅ Build completed
           **Trigger:** ${{ github.event_name }}
           **Branch/Tag:** ${{ github.ref_name }}
           **Version Tag:** \`${{ steps.version.outputs.tag }}\`
           **Registry:** \`${{ env.REGISTRY }}/${REPO_LOWERCASE}\`
-          **Platforms:** linux/amd64, linux/arm64
+          
+          ## Build Status
+          - ${AMD64_ICON} **AMD64** (ubuntu-24.04): $AMD64_STATUS
+          - ${ARM64_ICON} **ARM64** (ubuntu-24.04-arm): $ARM64_STATUS
           
           ## Built Images
+          Each image is available for both amd64 and arm64:
           - \`package-builder-deb-jammy:${{ steps.version.outputs.tag }}\`
           - \`package-builder-deb-noble:${{ steps.version.outputs.tag }}\`
           - \`package-builder-rpm-el8:${{ steps.version.outputs.tag }}\`
           - \`package-builder-rpm-el9:${{ steps.version.outputs.tag }}\`
+          
+          Docker automatically creates multi-arch manifests when both builds succeed.
           EOF
