chore: use ghcr for gradle build as well
Refs: XRDDEV-3003

--- a/src/security-server/e2e-test/src/intTest/resources/compose.ss-hsm.e2e.yaml
+++ b/src/security-server/e2e-test/src/intTest/resources/compose.ss-hsm.e2e.yaml
@@ -1,8 +1,7 @@
 services:
   signer:
-    image: ""
     build:
-        context: ../../../development/docker/security-server/signer-with-hsm
-        args:
-          - REGISTRY_URL=localhost:5555
-        dockerfile: Dockerfile
+      context: ../../../development/docker/security-server/signer-with-hsm
+      args:
+        - REGISTRY_URL=${IMAGE_REGISTRY:-localhost:5555}
+      dockerfile: Dockerfile
