--- a/.github/workflows/_test-e2e.yml
+++ b/.github/workflows/_test-e2e.yml
@@ -82,6 +82,8 @@ jobs:
       # Execute and report
       - name: Run E2E tests
         working-directory: ./src
+        env:
+          IMAGE_REGISTRY: ${{ inputs.image_registry }}
         run: |
           docker network create xroad-network
           ./gradlew -Dorg.gradle.jvmargs=-Xmx1g \
