chore: use ghcr for gradle build as well
Refs: XRDDEV-3003

--- a/src/security-server/e2e-test/src/intTest/resources/compose.ss-hsm.e2e.yaml
+++ b/src/security-server/e2e-test/src/intTest/resources/compose.ss-hsm.e2e.yaml
@@ -1,7 +1,8 @@
 services:
   signer:
+    image: ss-signer-with-hsm:latest # this is the name of image that is built from context below
     build:
       context: ../../../development/docker/security-server/signer-with-hsm
       args:
-        - REGISTRY_URL=${IMAGE_REGISTRY:-localhost:5555}
+        - BASE_SIGNER_IMAGE=${SIGNER_IMG:-localhost:5555/ss-signer:latest}
       dockerfile: Dockerfile
