--- a/deployment/security-server/images/admin-service/Dockerfile
+++ b/deployment/security-server/images/admin-service/Dockerfile
@@ -1,7 +1,7 @@
 ARG REGISTRY=localhost:5555
-ARG BASE_IMAGE_TAG=latest
+ARG IMAGE_TAG=latest
 ARG BASE_IMAGE=base-images/ss-baseline-runtime
-FROM ${REGISTRY}/${BASE_IMAGE}:${BASE_IMAGE_TAG}
+FROM ${REGISTRY}/${BASE_IMAGE}:${IMAGE_TAG}
 
 COPY --from=build-artifacts --chown=xroad:xroad /proxy-ui-api-1.0.jar /opt/app/proxy-ui-api.jar
 COPY --from=entrypoint --chmod=755 /entrypoint.sh /opt/app/entrypoint.sh
