--- a/deployment/security-server/images/base-images/signer/Dockerfile
+++ b/deployment/security-server/images/base-images/signer/Dockerfile
@@ -1,8 +1,8 @@
 ARG REGISTRY=localhost:5555
-ARG BASE_IMAGE_TAG=latest
+ARG IMAGE_TAG=latest
 ARG BASE_IMAGE=base-images/ss-baseline-runtime
 
-FROM ${REGISTRY}/${BASE_IMAGE}:${BASE_IMAGE_TAG}
+FROM ${REGISTRY}/${BASE_IMAGE}:${IMAGE_TAG}
 
 # Copy PKCS#11 wrapper library for hardware security module support
 ARG TARGETARCH
