--- a/deployment/security-server/images/quarkus/Dockerfile
+++ b/deployment/security-server/images/quarkus/Dockerfile
@@ -1,8 +1,8 @@
 ARG REGISTRY=localhost:5555
-ARG BASE_IMAGE_TAG=latest
+ARG IMAGE_TAG=latest
 ARG BASE_IMAGE=base-images/ss-baseline-runtime
 
-FROM ${REGISTRY}/${BASE_IMAGE}:${BASE_IMAGE_TAG}
+FROM ${REGISTRY}/${BASE_IMAGE}:${IMAGE_TAG}
 
 COPY --from=build-artifacts --chown=xroad:xroad / /opt/app/
 COPY --from=entrypoint --chmod=755 /entrypoint.sh /opt/app/entrypoint.sh
