chore: setting subject cn and alt name when provisioning cs admin and management services tls credentials
Refs: XRDDEV-3012

--- a/development/ansible/roles/xroad-cs/tasks/ubuntu.yml
+++ b/development/ansible/roles/xroad-cs/tasks/ubuntu.yml
@@ -8,9 +8,9 @@
   with_items:
     - { question: "xroad-common/username",               value: "{{ xroad_ui_user }}" }
     - { question: "xroad-common/database-host",          value: "{{ database_host }}" }
-    - { question: "xroad-common/admin-subject",          value: "/CN={{ inventory_hostname }}" }
+    - { question: "xroad-common/admin-subject",          value: "{{ inventory_hostname }}" }
     - { question: "xroad-common/admin-altsubject",       value: "IP:{{ ansible_default_ipv4.address }},DNS:{{ inventory_hostname }}" }
-    - { question: "xroad-common/service-subject",        value: "/CN={{ inventory_hostname }}" }
+    - { question: "xroad-common/service-subject",        value: "{{ inventory_hostname }}" }
     - { question: "xroad-common/service-altsubject",     value: "IP:{{ ansible_default_ipv4.address }},DNS:{{ inventory_hostname }}" }
     - { question: "xroad-common/global-conf-subject",    value: "/CN={{ inventory_hostname }}" }
     - { question: "xroad-common/global-conf-altsubject", value: "IP:{{ ansible_default_ipv4.address }},DNS:{{ inventory_hostname }}" }
