chore: remove jib functionality in favor of vanilla docker builds
Refs: XRDDEV-3003

--- a/.github/workflows/_build-and-package.yml
+++ b/.github/workflows/_build-and-package.yml
@@ -238,7 +238,7 @@ jobs:
             --registry ${{ env.IMAGE_REGISTRY }} \
             --version ${{ env.SERVICE_IMAGE_TAG }} \
             --packages-path ${{ github.workspace }}/deployment/native-packages/build/ubuntu24.04 \
-            --platforms linux/amd64,linux/arm64
+            --platforms linux/amd64
 
       - name: Log storage after all packaging
         if: always()
