--- a/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
+++ b/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
@@ -109,7 +109,7 @@ services:
       start_period: 5s
       interval: 5s
       retries: 40
-      test: [ "CMD", "pg_isready", "-U", "postgres", "-h", "localhost" ]
+      test: [ "CMD", "pg_isready", "-U", "serverconf", "-h", "localhost" ]
     deploy:
       resources:
         reservations:
