--- a/src/service/op-monitor/op-monitor-int-test/src/intTest/resources/compose.intTest.yaml
+++ b/src/service/op-monitor/op-monitor-int-test/src/intTest/resources/compose.intTest.yaml
@@ -7,10 +7,12 @@ services:
       - XROAD_COMMON_RPC_USE_TLS=false
       - XROAD_COMMON_GLOBAL_CONF_SOURCE=FILESYSTEM
       - XROAD_OP_MONITOR_RPC_LISTEN_ADDRESS=0.0.0.0
-      - xroad.db.op-monitor.hibernate.connection.url=jdbc:postgresql://db-opmonitor:5432/op-monitor
-      - xroad.db.op-monitor.hibernate.connection.username=opmonitor
-      - xroad.db.op-monitor.hibernate.connection.password=secret
-      - xroad.db.op-monitor.hibernate.connection.driver_class=org.postgresql.Driver
+      - XROAD_DB_OPMONITOR_HIBERNATE_CONNECTION_URL=jdbc:postgresql://db-opmonitor:5432/op-monitor
+      - XROAD_DB_OPMONITOR_HIBERNATE_CONNECTION_USERNAME=opmonitor
+      - XROAD_DB_OPMONITOR_HIBERNATE_CONNECTION_PASSWORD=secret
+      - XROAD_DB_OPMONITOR_HIBERNATE_CONNECTION_DRIVER_CLASS=org.postgresql.Driver
+      - DEBUG=true
+      - DEBUG_SUSPEND=n
     ports:
       - "0:9999" # debug port
     healthcheck:
@@ -40,7 +42,7 @@ services:
       start_period: 5s
       interval: 5s
       retries: 40
-      test: [ "CMD", "pg_isready", "-U", "postgres", "-h", "localhost" ]
+      test: [ "CMD", "pg_isready", "-U", "opmonitor", "-d", "op-monitor", "-h", "localhost" ]
     deploy:
       resources:
         reservations:
